fix: closes #7374 - Fixed scrollbar not being accessible because it's too thin, r=tabs

--- a/src/zen/tabs/zen-tabs/vertical-tabs.css
+++ b/src/zen/tabs/zen-tabs/vertical-tabs.css
@@ -385,7 +385,7 @@
   min-height: fit-content;
   overflow-y: auto;
   height: 100%;
-  scrollbar-width: thin;
+  scrollbar-color: color-mix(in srgb, currentColor 26%, transparent) transparent;
 
   /* Only do this hack if we have workspaces enabled */
   :root[zen-workspace-id] & {
